Customer address plus sign validation

--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "id": "d265c2ca-fc22-4654-83b8-365bf9652ef8",
-  "name": "custom-validation-bcext",
-  "publisher": "Default publisher",
+  "name": "Custom Validations Practice",
+  "publisher": "VS Sistemas",
   "version": "1.0.0.0",
-  "brief": "",
-  "description": "",
+  "brief": "Provides custom validations for various fields.",
+  "description": "A test project for learning purposes, not for commercial use.",
   "privacyStatement": "",
   "EULA": "",
   "help": "",
